--- a/pages/reports/ntak/check_in.mdx
+++ b/pages/reports/ntak/check_in.mdx
@@ -70,25 +70,25 @@ We will delve into the steps and techniques required to build the report dynamic
   </Tabs.Tab>
 </Tabs>
 
-### URL Parameters
+  ### URL Parameters
 
-| Name            | Description            |
-|:----------------|:-----------------------|
-| `accommodation` | The accommodation `id` |
+  | Name            | Description            |
+  |:----------------|:-----------------------|
+  | `accommodation` | The accommodation `id` |
 
 ### Request body
 
 #### `guests`
 
-| Type                                       | Description                                   | Required |
-|:-------------------------------------------|:----------------------------------------------|:--------:|
-| [Guest](/terminology/ntak-objects#guest)[] | Array of guests. Minimum 1 guest is required. |   Yes    |
+| Type                           | Description                                   | Required |
+|:-------------------------------|:----------------------------------------------|:--------:|
+| [Guest](/ntak-objects#guest)[] | Array of guests. Minimum 1 guest is required. |   Yes    |
 
 #### `occupiedResidentialUnit`
 
-| Type                                                           | Description                                  | Required |
-|:---------------------------------------------------------------|:---------------------------------------------|:--------:|
-| [Residential unit](/terminology/ntak-objects#residential-unit) | The occupied residential unit by the guests. |   Yes    |
+| Type                                               | Description                                  | Required |
+|:---------------------------------------------------|:---------------------------------------------|:--------:|
+| [Residential unit](/ntak-objects#residential-unit) | The occupied residential unit by the guests. |   Yes    |
 
 #### `occurredAt`
 
