--- a/pages/reports/ntak/room_change.mdx
+++ b/pages/reports/ntak/room_change.mdx
@@ -89,21 +89,21 @@ We will delve into the steps and techniques required to build the report dynamic
 
 #### `guests`
 
-| Type                                       | Description                                   | Required |
-|:-------------------------------------------|:----------------------------------------------|:--------:|
-| [Guest](/terminology/ntak-objects#guest)[] | Array of guests. Minimum 1 guest is required. |   Yes    |
+| Type                           | Description                                   | Required |
+|:-------------------------------|:----------------------------------------------|:--------:|
+| [Guest](/ntak-objects#guest)[] | Array of guests. Minimum 1 guest is required. |   Yes    |
 
 #### `abandonedResidentialUnit`
 
-| Type                                                           | Description                                   | Required |
-|:---------------------------------------------------------------|:----------------------------------------------|:--------:|
-| [Residential unit](/terminology/ntak-objects#residential-unit) | The abandoned residential unit by the guests. |   Yes    |
+| Type                                               | Description                                   | Required |
+|:---------------------------------------------------|:----------------------------------------------|:--------:|
+| [Residential unit](/ntak-objects#residential-unit) | The abandoned residential unit by the guests. |   Yes    |
 
 #### `occupiedResidentialUnit`
 
-| Type                                                           | Description                                  | Required |
-|:---------------------------------------------------------------|:---------------------------------------------|:--------:|
-| [Residential unit](/terminology/ntak-objects#residential-unit) | The occupied residential unit by the guests. |   Yes    |
+| Type                                               | Description                                  | Required |
+|:---------------------------------------------------|:---------------------------------------------|:--------:|
+| [Residential unit](/ntak-objects#residential-unit) | The occupied residential unit by the guests. |   Yes    |
 
 #### `occurredAt`
 
