--- a/pages/reports/viza/check_in.mdx
+++ b/pages/reports/viza/check_in.mdx
@@ -229,17 +229,17 @@ The guests who check in to the accommodation. Minimum 1 guest.
 
         Gender of the guest.
 
-        | Type                                       |        Required         |
-        |:-------------------------------------------|:-----------------------:|
-        | [`Gender`](/terminology/constants#genders) | If it's on the document |
+        | Type                           |        Required         |
+        |:-------------------------------|:-----------------------:|
+        | [`Gender`](/constants#genders) | If it's on the document |
 
     * ##### `documentType` [#guests-scanned-documentType]
 
         Document type of the guest.
 
-        | Type                                                     | Required |
-        |:---------------------------------------------------------|:--------:|
-        | [`Document type`](/terminology/constants#document-types) |   Yes    |
+        | Type                                         | Required |
+        |:---------------------------------------------|:--------:|
+        | [`Document type`](/constants#document-types) |   Yes    |
 
     * ##### `documentNumber` [#guests-scanned-documentNumber]
 
@@ -339,17 +339,17 @@ The guests who check in to the accommodation. Minimum 1 guest.
 
         Gender of the guest.
 
-        | Type                                       |        Required         |
-        |:-------------------------------------------|:-----------------------:|
-        | [`Gender`](/terminology/constants#genders) | If it's on the document |
+        | Type                           |        Required         |
+        |:-------------------------------|:-----------------------:|
+        | [`Gender`](/constants#genders) | If it's on the document |
 
     * ##### `documentType` [#guests-manual-documentType]
 
         Document type of the guest.
 
-        | Type                                                     | Required |
-        |:---------------------------------------------------------|:--------:|
-        | [`Document type`](/terminology/constants#document-types) |   Yes    |
+        | Type                                         | Required |
+        |:---------------------------------------------|:--------:|
+        | [`Document type`](/constants#document-types) |   Yes    |
 
     * ##### `documentNumber` [#guests-manual-documentNumber]
 
