--- a/pages/reports/ntak/check_out.mdx
+++ b/pages/reports/ntak/check_out.mdx
@@ -80,15 +80,15 @@ We will delve into the steps and techniques required to build the report dynamic
 
 #### `guests`
 
-| Type                                       | Description                                   | Required |
-|:-------------------------------------------|:----------------------------------------------|:--------:|
-| [Guest](/terminology/ntak-objects#guest)[] | Array of guests. Minimum 1 guest is required. |   Yes    |
+| Type                           | Description                                   | Required |
+|:-------------------------------|:----------------------------------------------|:--------:|
+| [Guest](/ntak-objects#guest)[] | Array of guests. Minimum 1 guest is required. |   Yes    |
 
 #### `abandonedResidentialUnit`
 
-| Type                                                           | Description                                   | Required |
-|:---------------------------------------------------------------|:----------------------------------------------|:--------:|
-| [Residential unit](/terminology/ntak-objects#residential-unit) | The abandoned residential unit by the guests. |   Yes    |
+| Type                                               | Description                                   | Required |
+|:---------------------------------------------------|:----------------------------------------------|:--------:|
+| [Residential unit](/ntak-objects#residential-unit) | The abandoned residential unit by the guests. |   Yes    |
 
 #### `occurredAt`
 
