Update Daily close

--- a/pages/reports/ntak/daily_close.mdx
+++ b/pages/reports/ntak/daily_close.mdx
@@ -148,7 +148,8 @@ Data describing the occupancy of the accommodation's room will be added to this 
 
 ### `afterStayExpenses` [#operating-after-stay-expenses]
 
-In this type, expenses recorded days or even weeks later after a room has been booked can be sent.
+In this type, expenses recorded days or even weeks later after a room has been booked can be sent. \
+**Important**: It is not necessary to refer to the room that generated the expense.
 
 | Type                                 | Required |
 |:-------------------------------------|:--------:|
@@ -156,7 +157,8 @@ In this type, expenses recorded days or even weeks later after a room has been b
 
 ### `afterStayLoads` [#operating-after-stay-loads]
 
-In this type, loads recorded days or even weeks later after a room has been booked can be sent.
+In this type, loads recorded days or even weeks later after a room has been booked can be sent. \
+**Important**: It is not necessary to refer to the room that generated the load.
 
 | Type                           | Required |
 |:-------------------------------|:--------:|
