Update VIZA reports

--- a/pages/reports/viza/check_in.mdx
+++ b/pages/reports/viza/check_in.mdx
@@ -68,7 +68,7 @@ We will delve into the steps and techniques required to build the report dynamic
     $guest = (new Guest())
       ->setArrival('2000-03-06 10:02:11')
       ->setDeparture('1980-01-03')
-      ->setGuestNumber('aa44181d-de4d-3d75-95e2-229b5c8ed753')
+      ->setId('aa44181d-de4d-3d75-95e2-229b5c8ed753')
       ->setManual($guestDocumentManual)
       ->setScanned($guestDocumentScanned)
       ->setVisaDateOfEntry('2020-11-01')
